добавила котика в меню

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 
 	<link rel="stylesheet" type="text/css" href="css/resetStyle.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<!-- Подключаем шрифт Oswald с использованием Google Fonts -->
 	<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500&display=swap" rel="stylesheet">
 </head>
 <body class="body" style="font-family: 'Oswald', sans-serif;">
@@ -31,6 +30,7 @@
       			<li class="menu-element">
         			<a class="menu-element__link" href="#contact">Contacts</a>
       			</li>
+				  <img src="image/cat.png" alt="image-cat" class="cat">
     		</ul>
   		</nav>
 	</div>
