--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   		<div class="header-center">
     		<div class="header-center__wrapper">
       			<h1 class="header__title">Валерия Панченко</h1>
-      			<p class="discription">Qa-инженер</p>
+      			<p class="discription">QA-Engineer</p>
     		</div>
   		</div>
 	</header>
@@ -50,7 +50,7 @@
 		</div>
 		<div class="right">
 			<h2 class="second-title">About me</h2>
-			<p class="second-title__description"><strong class="description__title">Мой стек:</strong> Devtools, Postman, YandexTracker, Charles, MongoDB, Metabase, Sentry, Kibana, Grafana, SOAP UI, Яндекс.Метрика, Test IT</p>
+			<p class="second-title__description"><strong class="description__title">Мой стек:</strong> REST, JSON, Devtools, API, Postman, Yandex Tracker, Kibana, Sentry, Grafana, Test IT, SQL, PostgreSQL, Mongo DB, HTML, CSS, Charles, Apache Kafka, Git, Linux, Firebase.T</p>
 			<p class="second-title__skill"><strong class="skill__title">Мой чек-лист:</strong>
 				<a class="Link description__link" href="https://miro.com/app/board/uXjVLrNvA-E=/">
 					<img src="image/miro.svg.png" alt="Miro" class="icons">
